<resources>
    <string name="app_name">AttendanceManager</string>
    <string name="action_logout_text">Logout</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="reset_password">Reset Password</string>
    <string name="home">Home</string>
    <string name="subjects">Subjects</string>
    <string name="notifications">Notifications</string>
    <string name="time_table">Time Table</string>
    <string name="title_activity_subjects">SubjectsActivity</string>
    <string name="progstatus">%1$d%</string>
    <string name="set_attendance_criteria">Set Attendance Criteria</string>
    <string-array name="countries_array">
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
    </string-array>
</resources>
