<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
        <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_criteria"

                    android:title="@string/set_attendance_criteria" />
                <item
                    android:id="@+id/nav_home"

                    android:title="@string/home" />
                <item
                    android:id="@+id/nav_time_table"

                    android:title="@string/time_table" />
                <item
                    android:id="@+id/nav_subjects"

                    android:title="@string/subjects" />

                <item
                    android:id="@+id/nav_notifications"

                    android:title="@string/notifications" />
                <item
                        android:id="@+id/nav_history"

                        android:title="History"/>

        </group>
</menu>